# zeus

./: .gitattributes  .gitignore  CLAUDE.md  README.md  RELEASING.md  pyproject.toml  zeus.pt
docs/superpowers/plans/: 2026-05-16-zeus-pip-package.md  2026-05-23-paper-faithful-preprocessing.md
docs/superpowers/specs/: 2026-05-16-zeus-pip-package-design.md  2026-05-23-paper-faithful-preprocessing-design.md
scripts/: measure_openml.py
tests/: conftest.py  openml_baselines.md  test_api.py  test_config.py  test_model_smoke.py  test_openml_regression.py  test_preprocessing.py  test_public_api.py  test_synthetic_regression.py  test_weights.py
zeus/: __init__.py  _config.py  api.py  preprocessing.py  utils.py  weights.py
zeus/inference_methods/: simple_gmm.py
zeus/model/: layer.py  zeus.py
