[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zeus"
version = "0.2.0.dev0"
description = "Zero-shot Embeddings for Unsupervised Separation of tabular data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Nakul Upadhya (fork maintainer)" }]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "platformdirs>=4.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "openml>=0.12"]

[project.urls]
Homepage = "https://github.com/upadhyan/zeus"
Upstream = "https://github.com/gmum/zeus"
Paper = "https://arxiv.org/abs/2505.10704"

[tool.setuptools.packages.find]
include = ["zeus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "openml: end-to-end regression test that downloads OpenML datasets (network)",
]
